deployment/node-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node
      
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
      - name: node-app
        image: m2a2/depi-node-app:46efcd2cbd6239caf29340f942c64f5735f4b9af
