deployment/node-service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  selector:
    app: node
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 3000
  type: LoadBalancer
